# axum-openapi3

./: Cargo.toml  README.md
.github/workflows/: ci.yml
axum-openapi-derive3/: Cargo.toml
axum-openapi-derive3/src/: handler_signature.rs  lib.rs
axum-openapi3-derive/: Cargo.toml  README.md
axum-openapi3-derive/src/: handler_signature.rs  lib.rs  macro_arguments.rs  util.rs
examples/: readme.rs  todo.rs  with_state.rs
src/: lib.rs
tests/: tests.rs
