[package]
name = "axum-openapi3"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
axum-openapi-derive3 = { optional = true, path = "axum-openapi-derive3"}
axum = { version = "0.7.6", default-features = false }
utoipa = { version = "5", features = ["debug"] }
once_cell = "1.8.0"
serde = { version = "1.0.214", default-features = false }

[dev-dependencies]
axum = { version = "0.7.6", features = ["macros"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "full", "sync"] }
anyhow = "1.0.91"

serde_json = "1.0.132"


[features]
default = ["derive"]

# Provide derive(Serialize, Deserialize) macros.
derive = ["axum-openapi-derive3"]


[workspace]
members = [
    "axum-openapi-derive3",
]