[package]
name = "axum-openapi3-derive"
version = "0.1.0"
edition = "2021"
description = "Facilitate the generation of OpenAPI 3.0 documentation for axum applications - derive macro"
license = "Apache-2.0"
authors = [
  "Tommaso Allevi <tomallevi@gmail.com>",
]
documentation = "https://docs.rs/axum-openapi3-derive"
repository = "https://github.com/oramasearch/axum-openapi3"
homepage = "https://crates.io/crates/axum-openapi3-derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["extra-traits", "full"] }
quote = "*"
proc-macro2 = "1"
http = "1"
